🩹 Fix horizontal scroll issue

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
   align-items: center;
   border-bottom: 0.1px solid lightgray;
   padding: 10px;
-  width: 100vw;
+  width: 100%;
   z-index: 100;
 }
 
